[tool.poetry]
name = "utensil"
version = "0.0.2a"
description = "A useful utensil kit for machine learning."
license = "BSD-3-Clause"
authors = ["Chou Hung-Yi <hychou.svm@gmail.com>"]
maintainers = ["Chou Hung-Yi <hychou.svm@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/HYChou0515/utensil"
repository = "https://github.com/HYChou0515/utensil"
documentation = "https://github.com/HYChou0515/utensil"
keywords = ["flow", "machine learning"]
classifiers = [
        "Development Status :: 1 - Planning",
        "Topic :: Scientific/Engineering",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Utilities",
    ]

[tool.poetry.dependencies]
python = ">=3.7.4,<4"
PyYAML = {version = "^5.4.1", optional = true}
pandas = {version = "^1.3.3", optional = true}
xgboost = {version = "^1.4.2", optional = true}
scikit-learn = {version = "^1.0", optional = true}
loguru = {version = "^0.5.3", optional = true}

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
pytest = "^6.2.5"
pytest-timeout = "^1.4.2"
pylint = "^2.11.1"
yapf = "^0.31.0"
toml = "^0.10.2"
Sphinx = "^4.2.0"
sphinx-autoapi = "^1.8.4"
pydata-sphinx-theme = "^0.7.0"

[tool.poetry.extras]
loopflow = ["PyYAML", "pandas", "xgboost", "scikit-learn"]
loguru = ["loguru"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "google"
