[metadata]
name = utensil
description = Wide variety of machine learning tools.
url = https://github.com/HYChou0515/utensil
version = 0.0.1a1
long_description = file: README.md
long_description_content_type = text/markdown
author = Hung-Yi Chou
author_email = hychou.svm@gmail.com
project_urls =
    Bug Tracker = https://github.com/HYChou0515/utensil/issues
    Source Code = https://github.com/HYChou0515/utensil
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Development Status :: 2 - Pre-Alpha

[options]
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False

[options.extras_require]
test =
    pytest>=5.0.1

