[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Chou Hung-Yi <hychou.svm@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "3.9^"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
loguru = "^0.5.3"
requests = "^2.26.0"
python-multipart = "^0.0.5"
pymongo = "^3.12.1"
PyYAML = "^6.0"
pandas = "^1.3.4"
xgboost = "^1.5.0"
scikit-learn = "^1.0.1"
scipy = "^1.7.2"
utensil = {path = "../dist/utensil-0.0.3-py3-none-any.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
